Pipeline sections; sidebar; UI

--- a/rollans_report/index.html
+++ b/rollans_report/index.html
@@ -49,12 +49,17 @@
 
 	<aside id="sidebar">
     <div id="sidebar-inner">
-  		<div id="sidebar-content">
+      <header>
         <figure>
             <img src="img/lits_logo.png" alt="Line In The Sand logo" />
         </figure>
-      </div>
-			<div id="features-info">
+        <h2 class="sidebar-title">How likely is a spill?</h2>
+        <p class="sidebar-intro">Probability of one or more medium (< 1 million litres) or large (> 1 million litres) hydrocarbon spills during the 50 year operational life of the Northern Gateway pipeline.</h2>
+        <p class="small-note">More info (link to Shane Rollans report)</p>
+      </header>
+      <div id="sidebar-content">
+        <div id="features-info">
+        </div>
       </div>
     </div>
 	</aside>
