Adding link to report doc

--- a/rollans_report/index.html
+++ b/rollans_report/index.html
@@ -55,7 +55,7 @@
         </figure>
         <h2 class="sidebar-title">How likely is a spill?</h2>
         <p class="sidebar-intro">Probability of one or more medium (< 1 million litres) or large (> 1 million litres) hydrocarbon spills during the 50 year operational life of the Northern Gateway pipeline.</h2>
-        <p class="small-note">More info (link to Shane Rollans report)</p>
+        <p class="small-note">Source: <a href="/docs/81051E.pdf"><em>Risk of a Hydrocarbon Spill during the 50 years of Operational Life of the Pipeline</em>, Shane Rollans, July 2012</a></p>
       </header>
       <div id="sidebar-content">
         <div id="features-info">
@@ -63,7 +63,7 @@
       </div>
     </div>
 	</aside>
-	
+
 	<div id="map">
 	</div>
 
